[tool.poetry]
name = "document-extraction"
version = "0.1.0"
description = ""
authors = ["Priyanga Ganapathi <priyanga.ganapathi@zoomrx.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
langchain = "^0.3.21"
langgraph = "^0.3.21"
pydantic = "^2.11.0"
langchain-mcp-adapters = "^0.0.5"
langchain-core = "^0.3.49"
langchain-openai = "^0.3.11"
langsmith = "^0.3.19"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
